--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "axios": "^1.4.0",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "styled-components": "^5.3.10",
+    "twin.macro": "^3.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
@@ -31,5 +35,10 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
